Problem with view on mobiles fixed

--- a/src/sass/hamburger.scss
+++ b/src/sass/hamburger.scss
@@ -6,7 +6,7 @@
  * @link https://github.com/jonsuh/hamburgers
  */
  .hamburger {
-     padding: 5px 5px;
+     padding: 15px 15px;
      display: inline-block;
      cursor: pointer;
      transition-property: opacity, filter;
