--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,7 +15,6 @@ body {
 	font-family: 'Numans', sans-serif;
 	font-size: 1.6rem;
 	background-color: #fff;
-	overflow-x: hidden;
 }
 
 // FIRST SCREEN
@@ -246,15 +245,16 @@ body {
 	.hamburger {
 		z-index: 200;
 		grid-row: 1 / 2;
-		grid-column: 1 / 3;
+		grid-column: 1 / 2;
 	}
 
 	&__title {
 		// margin: 0 auto;
 		grid-row: 1 / 2;
-		grid-column: 3 / 9;
+		grid-column: 2 / 9;
 		font-size: 2.4rem;
-		letter-spacing: 5px;
+		text-align: center;
+		letter-spacing: 10px;
 	}
 
 	&__links {
@@ -282,12 +282,12 @@ body {
 		margin: 0.5rem;
 		padding: 1.5rem;
 		width: 80%;
-		font-size: 2rem;
+		font-size: 1.6rem;
 		text-align: center;
 		text-transform: uppercase;
 		text-decoration: none;
 		color: #2e4f4f;
-		background-size: 10%;
+		background-size: 8%;
 		background-position: 5% 50%;
 		background-repeat: no-repeat;
 		transition: transform 0.3s ease;
@@ -342,10 +342,9 @@ body {
 		font-size: 1.8rem;
 		box-shadow: 0 0 15px #2e4f4f;
 		text-align: center;
-		transition: font-size 0.3s ease;
 
 		a {
-			padding: 10px 50px;
+			padding: 10px 30px;
 			color: #2e4f4f;
 			text-decoration: none;
 			cursor: pointer;
@@ -358,6 +357,7 @@ body {
 .main {
 	position: relative;
 	margin: 0 auto;
+	scroll-margin-top: 20vh;
 	display: none;
 	flex-direction: column;
 	align-items: center;
@@ -375,18 +375,21 @@ body {
 	&__img {
 		position: sticky;
 		top: 0;
-		left: 50%;
+		left: 0;
+		bottom: 0;
+		right: 0;
 		width: 100%;
 		max-width: 1200px;
 		height: 80vh;
 		background-image: url('/dist/img/main_field_large.jpg');
 		background-position: bottom;
+		background-attachment: fixed;
 		background-size: cover;
 	}
-
+	
 	&__logo-img {
-		position: absolute;
-		top: 50%;
+		position: fixed;
+		top: 55%;
 		left: 50%;
 		transform: translate(-50%, -50%);
 		width: 400px;
@@ -397,12 +400,11 @@ body {
 	// SCORES
 
 	.scores {
+		position: absolute;
+		top: 40px;
 		display: flex;
 		flex-grow: 1;
-		height: 100%;
-		min-height: max-content;
 		flex-direction: column;
-		position: absolute;
 		justify-content: flex-start;
 		align-items: center;
 		width: 80%;
@@ -443,14 +445,13 @@ body {
 
 	.standings {
 		position: absolute;
-		top: 1vh;
+		top: 2vh;
 		display: table;
 		font-size: 1.5rem;
 		background-color: rgba(255, 255, 255, 0.7);
 		color: #2e4f4f;
 		border-radius: 10px;
 		border-collapse: collapse;
-		overflow: hidden;
 
 		&__teams tr,
 		&__header tr {
@@ -521,11 +522,11 @@ body {
 
 @media (max-width: 576px) {
 	.nav-mobile__title {
-		font-size: 1.2rem;
+		font-size: 1.4rem;
+		letter-spacing: 5px;
 	}
 
 	.main {
-		overflow-x: hidden;
 
 		.standings {
 			font-size: 1rem;
@@ -565,17 +566,42 @@ body {
 
 @media (max-height: 800px) {
 	.nav {
-		display: none;
-	}
-
-	.nav-mobile {
-		display: grid;
+		height: 12vh;
+		&__link {
+			padding-bottom: 0.5rem;
+			padding-top: 0.5rem;
+			font-size: 1.8rem;
+			background-size: 10%;
+			background-position: left 1rem bottom 0.6rem;
+		}
+	
+		&__link:nth-child(1),
+		&__link:nth-child(3) {
+			background-position: left 0.1rem bottom 0.6rem;
+		}
+		&__link::before,
+		&__link::after {
+			bottom: 2px;
+		}
 	}
 
 	.main {
+	
+		&__img {
+			height: 88vh;
+		}
 		&__logo-img {
 			width: 200px;
 			height: 200px;
+		}
+	}
+}
+@media (max-height: 370px) {
+	.main{
+		&__logo-img {
+			width: 150px;
+			height: 150px;
+			top: 70%;
 		}
 	}
 }
